# deepseek_ocr_demo

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
