[project]
name = "deepseek-ocr-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "fastapi>=0.120.0",
    "psutil>=7.1.1",
    "python-multipart>=0.0.20",
    "transformers==4.46.3",
    "uvicorn>=0.38.0",
    "wheel>=0.45.1",
]
